--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://Vivek0306.github.io/React_ToDoList"
 }
